feat: harden profit distribution engine with database indexing, role-based access control, and new operational endpoints.